@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19920819
+MANIFEST for ded, version t19920820
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
